# 1001-projet

./: README.md  pyproject.toml  test_seg_fault.py
data/: A0A024F910  Q555C6.fasta  Q6JAN0
nvpd/: basic_edit_distance.py  bench.py  bench2.py  edit_distance.py  nvpd.py  parser.py  runner.py
src/: basic_edit_distance.py  bench.py  bench2.py  edit_distance.py  loader.py  nvpd.py  parser.py  runner.py
