[tool.poetry]
name = "nvpd"
version = "0.1.0"
description = "This project aim to implement the novel parallel edit distance algorithm in Python"
authors = ["Zackarie Vinckier <z.vinkier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23"
numba = "^0.56.4"
black = "^22.12.0"
fastaparser = "^1.1.1"
edlib = "^1.3.9"
editdistance = "^0.6.2"
levenshtein = "^0.20.9"

[tool.poetry.scripts]
nvpd = "nvpd.runner:run"
bench = "nvpd.bench:bench"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
